--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300;400;800&family=Oswald:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/index.css" />
+
     <title>Lostark</title>
   </head>
   <body>
@@ -17,6 +22,14 @@
           />
           <img src="./resources/logo-big.png" alt="Logo de Lostark" />
         </picture>
+        <nav>
+          <ul>
+            <li><a href="">CALENDARIO</a></li>
+            <li><a href="">PERSONAJES</a></li>
+            <li><a href="">EQUIPOS</a></li>
+            <li><a class="perfil" href="">PERFIL</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main>
