--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300;400;800&family=Oswald:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300;400;800&family=Oswald:wght@700&family=Tinos:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/index.css" />
@@ -35,25 +35,238 @@
     <main>
       <div class="fondo"></div>
       <div class="contenedor">
-        <section class="registro-login">
-          <div class="login">
-            <h2>Login</h2>
-            <form action="https://formspree.io/f/xvolwyjy" method="POST">
-              <div>
-                <label for="email">Email:</label>
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  required
-                  placeholder="Escriba su email"
-                />
+        <section class="section-clases">
+          <h2>PERSONAJES</h2>
+          <div class="div-personajes"></div>
+          <div>
+            <h3>MIS PERSONAJES</h3>
+            <div class="div-mis-personajes">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </div>
+
+          <div class="div-nuevo-personaje">
+            <div>
+              <div class="div-nuevo-personaje-superior">
+                <h3>NUEVO PERSONAJE</h3>
+                <button type="button" class="btn-cerrar">X</button>
               </div>
-              <div>
-                <label for="password">Password:</label>
-                <input type="password" name="password" id="password" />
+              <div class="div-nuevo-personaje-centro">
+                <p>Clase selecionada: <span>BERSERKER</span></p>
+                <form method="">
+                  <label for="nombre">Nombre del nuevo personaje:</label>
+                  <input
+                    type="text"
+                    id="nombre"
+                    placeholder="Nombre de tu nuevo personaje"
+                  />
+                  <button type="submit">Crear personaje</button>
+                </form>
               </div>
-            </form>
+            </div>
+          </div>
+
+          <div class="div-clases">
+            <h3>NUEVO PERSONAJE</h3>
+
+            <div class="div-guerrero">
+              <picture>
+                <img src="./resources/Clases/BERSERKER.jpeg" />
+              </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Warrior.webp" />
+                </picture>
+                <h4>BERSERKER</h4>
+              </div>
+            </div>
+
+            <div class="div-guerrero">
+              <picture> <img src="./resources/Clases/WARLORD.jpeg" /> </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Warrior.webp" />
+                </picture>
+                <h4>ARTILLERO DE LANZA</h4>
+              </div>
+            </div>
+
+            <div class="div-guerrero">
+              <picture>
+                <img src="./resources/Clases/HOLY_KNIGHT.jpeg" />
+              </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Warrior.webp" />
+                </picture>
+                <h4>PALADÍN</h4>
+              </div>
+            </div>
+
+            <div class="div-artista">
+              <picture> <img src="./resources/Clases/STRIKER.jpeg" /> </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Martial_Artist.webp" />
+                </picture>
+                <h4>STRIKER</h4>
+              </div>
+            </div>
+
+            <div class="div-artista">
+              <picture>
+                <img src="./resources/Clases/WARDANCER.jpeg" />
+              </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Martial_Artist.webp" />
+                </picture>
+                <h4>BAILARINA GUERRERA</h4>
+              </div>
+            </div>
+
+            <div class="div-artista">
+              <picture>
+                <img src="./resources/Clases/SCRAPPER.jpeg" />
+              </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Martial_Artist.webp" />
+                </picture>
+                <h4>MATONA</h4>
+              </div>
+            </div>
+
+            <div class="div-artista">
+              <picture>
+                <img src="./resources/Clases/SOULFIST.jpeg" />
+              </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Martial_Artist.webp" />
+                </picture>
+                <h4>PUÑO ESPIRITUAL</h4>
+              </div>
+            </div>
+
+            <div class="div-artista">
+              <picture>
+                <img src="./resources/Clases/GLAIVIER.jpeg" />
+              </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Martial_Artist.webp" />
+                </picture>
+                <h4>GUJERA</h4>
+              </div>
+            </div>
+
+            <div class="div-artillero">
+              <picture>
+                <img src="./resources/Clases/GUNSLINGER.jpeg" />
+              </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Gunner.webp" />
+                </picture>
+                <h4>PISTOLERO</h4>
+              </div>
+            </div>
+
+            <div class="div-artillero">
+              <picture>
+                <img src="./resources/Clases/ARTILLERIST.jpeg" />
+              </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Gunner.webp" />
+                </picture>
+                <h4>ARTIFICIERO</h4>
+              </div>
+            </div>
+
+            <div class="div-artillero">
+              <picture> <img src="./resources/Clases/DEADEYE.jpeg" /> </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Gunner.webp" />
+                </picture>
+                <h4>CAZADEMONIOS</h4>
+              </div>
+            </div>
+
+            <div class="div-artillero">
+              <picture>
+                <img src="./resources/Clases/SHARPSHOOTER.jpeg" />
+              </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Gunner.webp" />
+                </picture>
+                <h4>FRANCOTIRADOR</h4>
+              </div>
+            </div>
+
+            <div class="div-mago">
+              <picture> <img src="./resources/Clases/BARD.jpeg" /> </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Mage.webp" />
+                </picture>
+                <h4>BARDA</h4>
+              </div>
+            </div>
+
+            <div class="div-mago">
+              <picture>
+                <img src="./resources/Clases/SORCERESS.jpeg" />
+              </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Mage.webp" />
+                </picture>
+                <h4>HECHICERA</h4>
+              </div>
+            </div>
+
+            <div class="div-asesino">
+              <picture>
+                <img src="./resources/Clases/SHADOWHUNTER.jpeg" />
+              </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Assassin.webp" />
+                </picture>
+                <h4>CAZASOMBRAS</h4>
+              </div>
+            </div>
+
+            <div class="div-asesino">
+              <picture>
+                <img src="./resources/Clases/DEATHBLADE.jpeg" />
+              </picture>
+              <div class="div-clase-informacion">
+                <picture>
+                  <img src="./resources/Clases/ClassIcon-Assassin.webp" />
+                </picture>
+                <h4>ESPADA LETAL</h4>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="section-calendario">
+          <div>
+            <h2>CALENDARIO</h2>
+            <picture><img src="./resources/line-separation.png"/></picture>
+          </div>
+        </section>
+        <section class="section-equipos">
+          <div>
+            <h2>EQUIPOS</h2>
+            <picture><img src="./resources/line-separation.png"/></picture>
           </div>
         </section>
       </div>
