--- a/index.html
+++ b/index.html
@@ -302,14 +302,140 @@
         <section class="section-calendario">
           <div>
             <h2>CALENDARIO</h2>
-            <picture><img src="./resources/line-separation.png"/></picture>
+            <div class="div-calendario">
+              <table>
+                <thead>
+                  <tr>
+                    <th></th>
+                    <th>
+                      <span class="long">Jueves</span>
+                      <span class="short">J</span>
+                    </th>
+                    <th>
+                      <span class="long">Viernes</span>
+                      <span class="short">V</span>
+                    </th>
+                    <th>
+                      <span class="long">Sábado</span>
+                      <span class="short">S</span>
+                    </th>
+                    <th>
+                      <span class="long">Domingo</span>
+                      <span class="short">D</span>
+                    </th>
+                    <th>
+                      <span class="long">Lunes</span>
+                      <span class="short">L</span>
+                    </th>
+                    <th>
+                      <span class="long">Martes</span>
+                      <span class="short">M</span>
+                    </th>
+                    <th>
+                      <span class="long">Miércoles</span>
+                      <span class="short">X</span>
+                    </th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="hour"><span>11:00</span></td>
+                    <td>
+                      <div id="j11"></div>
+                      j11
+                    </td>
+                    <td>
+                      <div id="v11"></div>
+                      v11
+                    </td>
+                    <td>
+                      <div id="s11"></div>
+                      s11
+                    </td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                  </tr>
+                  <tr>
+                    <td class="hour"><span>12:00</span></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                  </tr>
+                  <tr>
+                    <td class="hour"><span>13:00</span></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                  </tr>
+                  <tr>
+                    <td class="hour"><span>14:00</span></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                  </tr>
+                  <tr>
+                    <td class="hour"><span>15:00</span></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                  </tr>
+
+                  <tr>
+                    <td class="hour"><span>16:00</span></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                  </tr>
+                  <tr>
+                    <td class="hour"><span>17:00</span></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                  </tr>
+
+                  <tr>
+                    <td class="hour"><span>18:00</span></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                    <td><div></div></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </section>
         <section class="section-equipos">
-          <div>
-            <h2>EQUIPOS</h2>
-            <picture><img src="./resources/line-separation.png"/></picture>
-          </div>
+          <div><h2>EQUIPOS</h2></div>
         </section>
       </div>
     </main>
