--- a/index.html
+++ b/index.html
@@ -40,28 +40,7 @@
           <div>
             <div class="div-mis-personajes">
               <h3>MIS PERSONAJES</h3>
-              <div class="div-personajes">
-                <ul>
-                  <li>
-                    <div>
-                      <p>Nombre del personaje</p>
-                      <button>Eliminar peronaje</button>
-                    </div>
-                  </li>
-                  <li>
-                    <div>
-                      <p>Nombre del personaje</p>
-                      <button>Eliminar peronaje</button>
-                    </div>
-                  </li>
-                  <li>
-                    <div>
-                      <p>Nombre del personaje</p>
-                      <button>Eliminar peronaje</button>
-                    </div>
-                  </li>
-                </ul>
-              </div>
+              <div id="div-mis-personajes"></div>
             </div>
 
             <div class="div-nuevo-personaje" id="nuevo-personaje">
@@ -73,11 +52,13 @@
                   </button>
                 </div>
                 <div class="div-nuevo-personaje-centro">
-                  <p>
-                    Clase selecionada:
-                    <span id="clase-selecionada">BERSERKER</span>
-                  </p>
-                  <form method="">
+                  <form id="form-crear-personaje">
+                    <label for="clase-selecionada">Clase selecionada:</label>
+                    <input
+                      disabled="disabled"
+                      type="text"
+                      id="clase-selecionada"
+                    />
                     <label for="nombre">Nombre del nuevo personaje:</label>
                     <input
                       type="text"
@@ -294,144 +275,13 @@
                   <h4>ESPADA LETAL</h4>
                 </div>
               </div>
-
-              <script src="./scripts/main.js"></script>
             </div>
           </div>
         </section>
         <section class="section-calendario">
           <div>
             <h2>CALENDARIO</h2>
-            <div class="div-calendario">
-              <table>
-                <thead>
-                  <tr>
-                    <th></th>
-                    <th>
-                      <span class="long">Jueves</span>
-                      <span class="short">J</span>
-                    </th>
-                    <th>
-                      <span class="long">Viernes</span>
-                      <span class="short">V</span>
-                    </th>
-                    <th>
-                      <span class="long">Sábado</span>
-                      <span class="short">S</span>
-                    </th>
-                    <th>
-                      <span class="long">Domingo</span>
-                      <span class="short">D</span>
-                    </th>
-                    <th>
-                      <span class="long">Lunes</span>
-                      <span class="short">L</span>
-                    </th>
-                    <th>
-                      <span class="long">Martes</span>
-                      <span class="short">M</span>
-                    </th>
-                    <th>
-                      <span class="long">Miércoles</span>
-                      <span class="short">X</span>
-                    </th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td class="hour"><span>11:00</span></td>
-                    <td>
-                      <div id="j11"></div>
-                      j11
-                    </td>
-                    <td>
-                      <div id="v11"></div>
-                      v11
-                    </td>
-                    <td>
-                      <div id="s11"></div>
-                      s11
-                    </td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                  </tr>
-                  <tr>
-                    <td class="hour"><span>12:00</span></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                  </tr>
-                  <tr>
-                    <td class="hour"><span>13:00</span></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                  </tr>
-                  <tr>
-                    <td class="hour"><span>14:00</span></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                  </tr>
-                  <tr>
-                    <td class="hour"><span>15:00</span></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                  </tr>
-
-                  <tr>
-                    <td class="hour"><span>16:00</span></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                  </tr>
-                  <tr>
-                    <td class="hour"><span>17:00</span></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                  </tr>
-
-                  <tr>
-                    <td class="hour"><span>18:00</span></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                    <td><div></div></td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+            <div class="div-calendario"></div>
           </div>
         </section>
         <section class="section-equipos">
@@ -439,5 +289,7 @@
         </section>
       </div>
     </main>
+    <!-- CUSTOM CODE -->
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
