trabajando en el login/registro

--- a/Lostark-React/public/index.html
+++ b/Lostark-React/public/index.html
@@ -32,9 +32,9 @@
         <nav>
           <ul>
             <li><a href="">CALENDARIO</a></li>
-            <li><a href="">PERSONAJES</a></li>
+            <li><a href="/">PERSONAJES</a></li>
             <li><a href="">EQUIPOS</a></li>
-            <li><a class="perfil" href="">PERFIL</a></li>
+            <li><a class="perfil" href="/login">PERFIL</a></li>
           </ul>
         </nav>
       </div>
