--- a/Lostark-React/public/index.html
+++ b/Lostark-React/public/index.html
@@ -31,7 +31,7 @@
         </picture>
         <nav>
           <ul>
-            <li><a href="">CALENDARIO</a></li>
+            <li><a href="/calendario">CALENDARIO</a></li>
             <li><a href="/">PERSONAJES</a></li>
             <li><a href="">EQUIPOS</a></li>
             <li><a class="perfil" href="/login">PERFIL</a></li>
